# word-record

./: README.md  config.json  pyproject.toml  run.bat  word_record.jsonl
src/word_record/: __init__.py
tests/: test_add.py
